--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
             </li>
             <li class="nav-item current">
                 <a href="contact.html" class="nav-link">
-                How To Reach Me
+                Connect With Me
             </a>
             </li>
            </ul>
@@ -52,19 +52,15 @@
     <h2 class="sm-heading">
         This is how you can reach me...
     </h2>
-    <div class="boxes">
-       <div>
-           <span class="text-secondary">Email:</span> johndoe@test.com
-       </div>
-       <div>
-        <span class="text-secondary">Phone:</span> (555) 555-5555
-    </div>
-    <div>
-        <span class="text-secondary">Address:</span> 50 Main st Boston Ma 02101
-    </div>
-    </div>
-    
-   </main>
+
+
+                  <form> 
+                    <input name="name" type="text" class="feedback-input" placeholder="Name" />   
+                    <input name="email" type="text" class="feedback-input" placeholder="Email" />
+                    <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
+                    <input type="submit" value="SUBMIT"/> 
+                  </form>
+                  </main>
 
    <footer id="main-footer">
     Copyright &copy; 2019
