--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </li>
             <li class="nav-item">
                 <a href="contact.html" class="nav-link">
-                How To Reach Me
+                    Connect With Me
             </a>
             </li>
            </ul>
@@ -47,7 +47,7 @@
 
    <main id="home">
     <h1 class="lg-heading">
-        John <span class="text-secondary">Doe</span>
+        Jane <span class="text-secondary">Doe</span>
     </h1>
     <h2 class="sm-heading">
         Web Developer, Programmer, Designer & Entrepreneur
